<resources>
    <string name="app_name">Fintest</string>
    <string name="processing_here">Processing here...</string>
    <string name="match_verify">Match/Verify</string>
    <string name="logging">Logging...</string>
    <string name="enroll_fingerprint">Enroll Fingerprint</string>
    <string name="authenticate">Authenticate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_storage">StorageActivity</string>
</resources>
